--- a/app/public/main.css
+++ b/app/public/main.css
@@ -97,14 +97,13 @@ article img {
 }
 
 /* la ptite wave a l'arriere */
-article::before {
-    content: '';
+/* C'est bon @Ugo, c'est plus un pseudo-element */
+article .wave {
     position: absolute;
     top: 0; left: 0;
     width: 100%; height: 100%;
     background-color: white;
     border-radius: 0 0 100% 0;
-    mix-blend-mode: difference;
 
     z-index: 0;
 }
