--- a/app/public/accueil/accueil.css
+++ b/app/public/accueil/accueil.css
@@ -1,3 +1,4 @@
+/* HEADER */
 header {
     display: flex;
     justify-content: space-between;
@@ -40,48 +41,46 @@ header div a:hover {
     box-shadow: 0 0 .25em 0 rgba(0, 0, 0, .25);
 }
 
+/* CONTENU PAGE */
+
 article {
     position: relative;
-    width: 100vw; min-height: calc(100vh - 6rem);
-    padding: 5vh 10vw;
-
-    background-color: rgba(0, 0, 0, .05); /* permet la wave */
+    width: 100%; height: calc(100vh - 6rem);
 
     display: flex;
+}
+
+article nav {
+    width: 15%; height: 100%;
+
+    padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: .75rem;
+
+    border-right: 1px solid var(--color);
+}
+
+article nav a {
+    display: flex;
     align-items: center;
-    gap: 0 2em;
+    padding: .5rem 1rem;
+
+    box-shadow: var(--box-shadow);
+    border-radius: .75rem;
+
+    transition: .1s box-shadow ease-out;
+    cursor: pointer;
 }
 
-article .left {
-    width: 60%;
-    z-index: 1;
+article nav a:hover {
+    box-shadow: 0 0 .25em 0 rgba(0, 0, 0, .25);
 }
 
-article .left h2 {
-    margin: 0;
 
-    font-size: 2.5rem;
-    font-weight: normal;
-}
+article .hero {
+    width: 85%; height: 100%;
 
-article .left p {
-    font-size: 1.25rem;
-}
-
-/* logo CY */
-article img {
-    width: 40%;
-    z-index: 1;
-}
-
-/* la ptite wave a l'arriere */
-/* C'est bon @Ugo, c'est plus un pseudo-element */
-article .wave {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background-color: white;
-    border-radius: 0 0 100% 0;
-
-    z-index: 0;
+    padding: 1rem 2rem;
 }
