--- a/app/public/main.css
+++ b/app/public/main.css
@@ -3,7 +3,7 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%; height: 6rem;
-
+    background-color: var(--background);
     padding: 0 1em;
 }
 
@@ -15,7 +15,7 @@ header h1 {
 header div {
     display: flex;
     align-items: center;
-    
+
     height: 100%;
     padding: 0 1em;
 
@@ -29,15 +29,17 @@ header div a {
 
     width: min-content; height: min-content;
     padding: 1em 2em;
-    
+
     border-radius: .75em;
     box-shadow: var(--box-shadow);
 
     transition: .1s box-shadow ease-out;
+
+    cursor: pointer;
 }
 
 header div a:hover {
-    box-shadow: 0 0 .25em 0 rgba(0, 0, 0, .25);
+    box-shadow: var(--box-shadow-hover);
 }
 
 article {
@@ -80,8 +82,7 @@ article .wave {
     position: absolute;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background-color: white;
+    background-color: var(--background);
     border-radius: 0 0 100% 0;
-
     z-index: 0;
 }
