--- a/app/public/root.css
+++ b/app/public/root.css
@@ -2,11 +2,13 @@
     --color: black;
     --background: white;
     --box-shadow: 0 0 .5em 0 rgba(0, 0, 0, .25);
+    --box-shadow-hover : 0 0 .25em 0 rgba(0, 0, 0, .25);
 }
 
 html, body {
     width: 100vw; min-height: 100vh;
     margin: 0;
+    color: var(--color);
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -18,4 +20,26 @@ html, body {
 a {
     color: var(--color);
     text-decoration: none;
+}
+
+.dark {
+   background-color: #0c2330;
+   --color: white;
+   --background : #112F41;
+   --box-shadow: 0 0 .5em 0 rgba(255, 255, 255, .25);
+   --box-shadow-hover: 0 0 .25em 0 rgba(255, 255, 255, .25);
+}
+
+.dark img {
+   filter: brightness(.9);
+}
+
+input {
+   background-color: transparent;
+   color: var(--color);
+   border: 1px solid var(--color);
+}
+
+input:not(.submit) {
+   border-radius: 5px;
 }
