--- a/app/public/root.css
+++ b/app/public/root.css
@@ -22,24 +22,45 @@ a {
     text-decoration: none;
 }
 
+.button {
+    background-color: transparent;
+    box-shadow: var(--box-shadow);
+    border: none;
+    border-radius: .5em;
+
+    transition: .1s box-shadow ease-out;
+    cursor: pointer;
+}
+
+.button:hover {
+    box-shadow: var(--box-shadow-hover);
+}
+
+.error {
+    color: red;
+    font-size: .75rem;
+}
+
+/* Dark mode */
 .dark {
-   background-color: #0c2330;
-   --color: white;
-   --background : #112F41;
-   --box-shadow: 0 0 .5em 0 rgba(255, 255, 255, .25);
-   --box-shadow-hover: 0 0 .25em 0 rgba(255, 255, 255, .25);
+    background-color: #0c2330;
+    --color: white;
+    --background : #112F41;
+    --box-shadow: 0 0 .5em 0 rgba(255, 255, 255, .25);
+    --box-shadow-hover: 0 0 .25em 0 rgba(255, 255, 255, .25);
 }
 
 .dark img {
-   filter: brightness(.9);
+    filter: brightness(.9);
 }
 
 input {
-   background-color: transparent;
-   color: var(--color);
-   border: 1px solid var(--color);
+    background-color: transparent;
+    color: var(--color);
+    border: 1px solid var(--color);
 }
 
 input:not(.submit) {
-   border-radius: 5px;
+    border-radius: 5px;
+    padding: .25rem .5rem;
 }
