--- a/app/public/inscription/inscription.css
+++ b/app/public/inscription/inscription.css
@@ -1,13 +1,14 @@
-html, body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+article {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   height: calc(100vh - 12rem);
 }
 
-article {
+article .box {
     padding: 2em 3em;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,11 +18,11 @@ article {
     border-radius: 1em;
 }
 
-article h2 {
+article .box h2 {
     margin: 0;
 }
 
-article form {
+article .box form {
     display: flex;
     flex-direction: column;
     gap: 1em 0;
@@ -29,7 +30,7 @@ article form {
     padding: .25em;
 }
 
-article form .button {
+article .box form .button {
     width: min-content; height: min-content;
     padding: .25em 1em;
 
@@ -42,16 +43,16 @@ article form .button {
     cursor: pointer;
 }
 
-article form .button:hover {
+article .box form .button:hover {
     box-shadow: 0 0 .25em 0 rgba(0, 0, 0, .25);
 }
 
-article p {
+article .box p {
     margin: 0;
     font-size: .75em;
 }
 
-article p a {
+article .box p a {
     text-decoration: underline;
 }
 
