--- a/app/public/root.css
+++ b/app/public/root.css
@@ -25,6 +25,50 @@ a {
     text-decoration: none;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%; height: 6rem;
+    background-color: var(--background);
+    padding: 0 1em;
+}
+
+header h1 {
+    font-weight: normal;
+    padding: 0 1em;
+}
+
+header div {
+    display: flex;
+    align-items: center;
+
+    height: 100%;
+    padding: 0 1em;
+
+    column-gap: 1em;
+}
+
+header div a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: min-content; height: min-content;
+    padding: 1em 2em;
+
+    border-radius: .75em;
+    box-shadow: var(--box-shadow);
+
+    transition: .1s box-shadow ease-out;
+
+    cursor: pointer;
+}
+
+header div a:hover {
+    box-shadow: var(--box-shadow-hover);
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -43,7 +87,7 @@ table th, td {
 }
 
 .button {
-    background-color: transparent;
+    background-color: var(--background-secondary);
     box-shadow: var(--box-shadow);
     border: none;
     border-radius: .5em;
@@ -90,4 +134,77 @@ input {
 input:not(.submit) {
     border-radius: 5px;
     padding: .25rem .5rem;
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  overflow: visible;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 34px;
+  overflow: hidden;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+.slider:after {
+     position: absolute;
+     content: "";
+     height: 19px;
+     width: 19px;
+     left: 15px;
+     top: 5px;
+     background: var(--background-secondary);
+     border-radius: 50%;
+     visibility: hidden;
+}
+
+input:checked + .slider {
+  background-color: var(--background-secondary);
+  box-shadow: var(--box-shadow);
+}
+
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+input:checked + .slider:after {
+  transform: translateX(26px);
+  visibility: visible;
+  transition: .4s;
+}
+
+
+/* Rounded sliders */
+.slider.round {
 }
