--- a/app/public/root.css
+++ b/app/public/root.css
@@ -136,75 +136,73 @@ input:not(.submit) {
     padding: .25rem .5rem;
 }
 
-
+/* Dark mode switch */
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-  overflow: visible;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    overflow: visible;
 }
 
 .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: .4s;
-  border-radius: 34px;
-  overflow: hidden;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+    overflow: hidden;
 }
 
+/* cercle blanc */
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: .4s;
-  border-radius: 50%;
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
 }
 
+/* cercle bleu (engendre lune) */
 .slider:after {
-     position: absolute;
-     content: "";
-     height: 19px;
-     width: 19px;
-     left: 15px;
-     top: 5px;
-     background: var(--background-secondary);
-     border-radius: 50%;
-     visibility: hidden;
+    position: absolute;
+    content: "";
+    height: 19px;
+    width: 19px;
+    left: 15px;
+    top: 5px;
+    background: white;
+    border-radius: 50%;
+    visibility: hidden;
 }
 
 input:checked + .slider {
-  background-color: var(--background-secondary);
-  box-shadow: var(--box-shadow);
+    background-color: var(--background-secondary);
+    box-shadow: var(--box-shadow);
 }
 
 
 input:checked + .slider:before {
-  transform: translateX(26px);
+    transform: translateX(26px);
 }
 
 input:checked + .slider:after {
-  transform: translateX(26px);
-  visibility: visible;
-  transition: .4s;
-}
-
-
-/* Rounded sliders */
-.slider.round {
+    transform: translateX(26px);
+    visibility: visible;
+    background-color: var(--background-secondary);
+    transition: .4s;
 }
