update (attributions): affichage option attribuée sur compte élève; fix (messagerie): gestion compte non-inscrit sur la plateforme; update (wave): visible sur l'intégralité du site

--- a/app/public/accueil/accueil.css
+++ b/app/public/accueil/accueil.css
@@ -38,6 +38,12 @@ article {
     width: 100%; height: calc(100vh - 6rem);
 
     display: flex;
+
+    background-color: var(--background-secondary);
+}
+
+article > * {
+    z-index: 1;
 }
 
 article nav {
