--- a/app/public/accueil/messagerie/messagerie.css
+++ b/app/public/accueil/messagerie/messagerie.css
@@ -18,6 +18,8 @@ h2 .button {
     height: max-content;
 
     overflow: visible;
+
+    background-color: transparent;
 }
 
 .messagerie__destinataires {
