--- a/app/public/accueil/profil/profil.css
+++ b/app/public/accueil/profil/profil.css
@@ -39,6 +39,10 @@
     margin: .25rem 0;
 }
 
+.profil form label:nth-of-type(2) {
+    margin-bottom: 1rem;
+}
+
 .profil form label u {
     cursor: pointer;
 }
