--- a/app/public/root.css
+++ b/app/public/root.css
@@ -1,7 +1,7 @@
 :root {
     --color: black;
     --background: white;
-    --background-secondary: rgba(0, 0, 0, .05);
+    --background-secondary: #f2f2f2;
     --box-shadow: 0 0 .5em 0 rgba(0, 0, 0, .25);
     --box-shadow-hover : 0 0 .25em 0 rgba(0, 0, 0, .25);
 }
@@ -205,4 +205,17 @@ input:checked + .slider:after {
     visibility: visible;
     background-color: var(--background-secondary);
     transition: .4s;
+}
+
+
+
+/* la ptite wave a l'arriere */
+/* C'est bon @Ugo, c'est plus un pseudo-element */
+article .wave {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background-color: var(--background);
+    border-radius: 0 0 100% 0;
+    z-index: 0;
 }
