--- a/app/public/root.css
+++ b/app/public/root.css
@@ -1,7 +1,7 @@
 :root {
     --color: black;
-    --background: white;
-    --background-secondary: #f2f2f2;
+    --background: #f9f9fa;
+    --background-secondary: #eff0f2;
     --box-shadow: 0 0 .5em 0 rgba(0, 0, 0, .25);
     --box-shadow-hover : 0 0 .25em 0 rgba(0, 0, 0, .25);
 }
@@ -23,6 +23,10 @@ html, body {
 a {
     color: var(--color);
     text-decoration: none;
+}
+
+attr {
+    overflow: visible;
 }
 
 header {
