--- a/app/public/accueil/attributions/attributions.css
+++ b/app/public/accueil/attributions/attributions.css
@@ -5,3 +5,31 @@ table th {
 table td {
     padding: 1px;
 }
+
+table a {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+form #file {
+    border: none;
+    border-bottom: 1px solid var(--color);
+    border-radius: 0;
+}
+
+form input[type="submit"]:first-of-type {
+    margin-top: 1rem;
+}
+
+label {
+    font-size: smaller;
+}
+
+
+.recherche {
+    margin-bottom: 1rem;
+}
+
+.recherche input[type="email"] {
+    min-width: 15%;
+}
